SET(SUB_NAME tests)
SET(DEPENDENCIES_DIR ${CMAKE_CURRENT_LIST_DIR}/../dependencies)
SET(LUA_DIR ${DEPENDENCIES_DIR}/lua)

FILE(GLOB SRCS
    *.cpp
    )

ADD_EXECUTABLE(${SUB_NAME}
    ${SRCS}
    )
TARGET_COMPILE_DEFINITIONS(${SUB_NAME} PUBLIC
    )
TARGET_INCLUDE_DIRECTORIES(${SUB_NAME} PUBLIC
    ${LUA_DIR}
    ../include
    ${DEPENDENCIES_DIR}/Catch2/include
    )
TARGET_LINK_LIBRARIES(${SUB_NAME}
    lualib
    )
